Cherry picking changes from 4.0.2